force-app/main/default/objects/Job_Orders__c/Job_Orders__c.object-meta.xml
<CustomObject>
    <label>WD Sales Orders</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>WD S0 #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD Sales Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>