force-app/main/default/objects/Job_Orders__c/fields/Beds_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Beds_Day_Rate__c</fullName>
    <label>Beds/Day Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>