force-app/main/default/objects/Job_Orders__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Transport_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>