force-app/main/default/objects/Job_Orders__c/fields/Client_Please_Sign_Date_Below__c.field-meta.xml
<CustomField>
    <fullName>Client_Please_Sign_Date_Below__c</fullName>
    <label>Client: Please Sign &amp; Date Below</label>
    <type>TextArea</type>
</CustomField>