force-app/main/default/objects/Job_Orders__c/fields/Days_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Hire__c</fullName>
    <label># Days of Hire</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>