force-app/main/default/objects/Job_Orders__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provide a brief description of the type of job, hire items, additional services, agreed contract items, etc....</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>