force-app/main/default/objects/Job_Orders__c/fields/From_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Location__c</fullName>
    <label>From Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>