force-app/main/default/objects/Job_Orders__c/fields/Fuel_Used__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fuel Used</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>