force-app/main/default/objects/Job_Orders__c/fields/Hire_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Hire_Item_Name__c</fullName>
    <label>Hire Item Name</label>
    <type>TextArea</type>
</CustomField>