force-app/main/default/objects/Job_Orders__c/fields/Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Date__c</fullName>
    <description>Date Job was started</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>