force-app/main/default/objects/Job_Orders__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related JO#</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>