force-app/main/default/objects/Job_Orders__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <inlineHelpText>Open - Record has been created as job is booked/started
Job Complete - TD received and uploaded to record.
Invoiced - Invoice has been created and sent to client</inlineHelpText>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Job Complete</fullName>
                <color>#33CC00</color>
                <label>Job Complete</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>WD Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>