force-app/main/default/objects/Job_Orders__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <inlineHelpText>At WD Unit - this item will be attached to a WD UNIT and will therefore be attached by daily report
Stand Alone item - is NOT at a WD UNIT and managed only by Job Order</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At WD Unit</fullName>
            </value>
            <value>
                <fullName>Stand Alone Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>