force-app/main/default/objects/Job_Orders__c/fields/Lump_Sum_Mobe__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Mobe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lump Sum Mobe</label>
    <type>Checkbox</type>
</CustomField>