force-app/main/default/objects/Job_Orders__c/fields/of_kms_from_Previous_Well__c.field-meta.xml
<CustomField>
    <fullName>of_kms_from_Previous_Well__c</fullName>
    <label># of kms from Previous Well</label>
    <length>10</length>
    <type>Text</type>
</CustomField>