force-app/main/default/objects/Job_Orders__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order #</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>