force-app/main/default/objects/Job_Orders__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <label>Other Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>