force-app/main/default/objects/Job_Orders__c/fields/Previous_Well__c.field-meta.xml
<CustomField>
    <fullName>Previous_Well__c</fullName>
    <label>Previous Well</label>
    <length>30</length>
    <type>Text</type>
</CustomField>