force-app/main/default/objects/Job_Orders__c/fields/Printed_for_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Printed_for_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printed for Invoicing</label>
    <type>Checkbox</type>
</CustomField>