force-app/main/default/objects/Job_Orders__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the rig or camp lease that the item is being delivered to (only applies if it WD camps/rig moves)</inlineHelpText>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Transport_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>