force-app/main/default/objects/Job_Orders__c/fields/Subcontractor_Info__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Info__c</fullName>
    <inlineHelpText>Provide details on which subcontractor was used and what configurations</inlineHelpText>
    <label>Subcontractor Details</label>
    <type>TextArea</type>
</CustomField>