force-app/main/default/objects/Job_Orders__c/fields/To_Be_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Invoiced__c</fullName>
    <label>To Be Invoiced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End of Month</fullName>
            </value>
            <value>
                <fullName>Invoice with WD Unit</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>On Job Completion</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>