force-app/main/default/objects/Job_Orders__c/fields/Trucks_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Trucks_on_Job__c</fullName>
    <label>Trucks on Job</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit 01</fullName>
            </value>
            <value>
                <fullName>Unit 02</fullName>
            </value>
            <value>
                <fullName>Unit 03</fullName>
            </value>
            <value>
                <fullName>Unit 04</fullName>
            </value>
            <value>
                <fullName>Unit 05</fullName>
            </value>
            <value>
                <fullName>Unit 06</fullName>
            </value>
            <value>
                <fullName>Unit 07</fullName>
            </value>
            <value>
                <fullName>Unit 08</fullName>
            </value>
            <value>
                <fullName>Unit 09</fullName>
            </value>
            <value>
                <fullName>Unit 10</fullName>
            </value>
            <value>
                <fullName>Unit 11</fullName>
            </value>
            <value>
                <fullName>Unit 12</fullName>
            </value>
            <value>
                <fullName>Unit 14</fullName>
            </value>
            <value>
                <fullName>Unit 15</fullName>
            </value>
            <value>
                <fullName>Unit 16</fullName>
            </value>
            <value>
                <fullName>Unit 17</fullName>
            </value>
            <value>
                <fullName>Unit 18</fullName>
            </value>
            <value>
                <fullName>Unit 19</fullName>
            </value>
            <value>
                <fullName>Ute</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>