force-app/main/default/objects/Job_Orders__c/fields/WD_Department__c.field-meta.xml
<CustomField>
    <fullName>WD_Department__c</fullName>
    <label>WD Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Rig</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>