force-app/main/default/objects/Job_Orders__c/fields/WD_Order__c.field-meta.xml
<CustomField>
    <fullName>WD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This Field is auto filled when the Transport Job Order is raised from within a WD Order.  The purpose of this is to link the Transport Job Order to the related Well that it is to be invoiced with</inlineHelpText>
    <label>WD Order #</label>
    <referenceTo>WD_Order__c</referenceTo>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>