force-app/main/default/objects/Job_Orders__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>only applies to movement of WD UNITS</inlineHelpText>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Transport_Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>