force-app/main/default/objects/Job_Orders__c/recordTypes/Camp.recordType-meta.xml
<RecordType>
    <fullName>Camp</fullName>
    <active>true</active>
    <label>Camp</label>
</RecordType>