force-app/main/default/objects/Job_Orders__c/recordTypes/Hire_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Hire_Equipment</fullName>
    <active>true</active>
    <label>Hire Equipment</label>
</RecordType>