force-app/main/default/objects/Job_Orders__c/listViews/All_camp_8.listView-meta.xml
<ListView>
    <fullName>All_camp_8</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Client_PO__c</columns>
    <columns>Printed_for_Invoicing__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Camp 8</value>
    </filters>
    <filters>
        <field>Job_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2016</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Orders__c.General,Job_Orders__c.Camp</value>
    </filters>
    <label>Camp #8 - General</label>
    <sharedTo>
        <group>Finance</group>
        <group>Safety</group>
    </sharedTo>
</ListView>