force-app/main/default/objects/Job_Orders__c/listViews/All_Rig_22.listView-meta.xml
<ListView>
    <fullName>All_Rig_22</fullName>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Printed_for_Invoicing__c</columns>
    <columns>Invoice__c</columns>
    <columns>Client_PO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>rig 22,camp 7</value>
    </filters>
    <filters>
        <field>Job_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2017</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Orders__c.General</value>
    </filters>
    <label>Rig #22/Camp #07 - General</label>
    <sharedTo>
        <group>Camp_1</group>
        <group>Camp_7</group>
        <group>Finance</group>
        <group>HR</group>
        <group>OPs_super</group>
        <group>Rig_22</group>
        <group>Safety</group>
    </sharedTo>
</ListView>