force-app/main/default/objects/Job_Orders__c/listViews/All_Rig_4_tport.listView-meta.xml
<ListView>
    <fullName>All_Rig_4_tport</fullName>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>WD_Unit__c</columns>
    <columns>Job_Date__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Client_PO__c</columns>
    <columns>Printed_for_Invoicing__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 4</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Orders__c.Transport</value>
    </filters>
    <filters>
        <field>Job_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <label>Rig #04 - Transport</label>
    <sharedTo>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Rig_4</group>
        <group>Transport</group>
    </sharedTo>
</ListView>