force-app/main/default/objects/Job_Orders__c/listViews/All_Rig_6.listView-meta.xml
<ListView>
    <fullName>All_Rig_6</fullName>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Client_PO__c</columns>
    <columns>Printed_for_Invoicing__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>rig 6</value>
    </filters>
    <label>Rig #06/Camp #02 - General</label>
    <sharedTo>
        <group>Camp_2</group>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Rig_6</group>
        <group>Safety</group>
    </sharedTo>
</ListView>