force-app/main/default/objects/Job_Orders__c/listViews/Approval_Required.listView-meta.xml
<ListView>
    <fullName>Approval_Required</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Client__c</columns>
    <columns>NAME</columns>
    <columns>Job_Date__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Site_ID__c</columns>
    <columns>Description__c</columns>
    <columns>Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Status__c</field>
        <operation>equals</operation>
        <value>Approval Required</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Job_Orders__c.Transport,Job_Orders__c.General</value>
    </filters>
    <label>Status - Approval Required</label>
    <sharedTo>
        <group>Finance</group>
        <group>Managing_Director</group>
    </sharedTo>
</ListView>